<resources>
    <string name="app_name">SkyPlayer</string>
    <string name="action_settings">Settings</string>

    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="queue">Queue</string>
    <string name="lyrics">Lyrics</string>
    <string name="equalizer">Equalizer</string>
    <string name="edit_tags">Edit Tags</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_album">AlbumActivity</string>
</resources>
